--- a/css/style.css
+++ b/css/style.css
@@ -975,7 +975,9 @@ select {
 
   .pruduct-container {
     flex-wrap: wrap;
-    justify-content: space-around;
+    padding-left: 35px;
+    padding-right: 35px;
+
   }
 
   .product {
