--- a/css/style.css
+++ b/css/style.css
@@ -685,6 +685,7 @@ select {
 
 .invalid-price {
   font-size: 14px;
+  margin-bottom: 0;
   text-decoration: line-through;
   text-transform: uppercase;
   color: #0f0d0e;
@@ -693,6 +694,7 @@ select {
 
 .valid-price {
   font-size: 20px;
+  margin-bottom: 0;
   text-transform: uppercase;
   color: #0f0d0e;
   font-weight: bold;
